--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "name": "butler",
   "private": true,
   "license": "MIT",
-  "author": "Evan Fleet"
+  "author": "Evan Fleet",
+  "workspaces": [
+    "packages/*"
+  ]
 }
