--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,6 +12,8 @@
     "start": "astro dev"
   },
   "dependencies": {
-    "astro": "^2.4.1"
+    "@astrojs/tailwind": "^3.1.3",
+    "astro": "^2.4.1",
+    "tailwindcss": "^3.3.2"
   }
 }
